# parallel-heat

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README  README.md  demo.txt  file_generator.py
input_files/: big_input.txt  input_file.txt  simple_input.txt  test.txt
ressources/: resolve.py
src/: Makefile  heat_simulator.cc  heat_simulator.cu  heat_simulator.hh  heat_simulator_cuda.hh  main.cc  main.cu  main_view.cc  viewer.cc  viewer.hh  vtk_viewer.cc  vtk_viewer.hh
